Add more info to README

--- a/README
+++ b/README
@@ -2,3 +2,18 @@ home
 ----
 
 A repo containing my configuration files and scripts.
+
+Minimum requreiments:
+  * wget
+  * git
+
+Nice to haves:
+  * zsh
+
+### Usage ###
+
+To get started:
+    git clone https://github.com/jprof/home.git
+    cd home
+    ./bootstrap
+
